[package]
name = "RWMem"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["ioctl", "fs"] }
libc = "0.2"
byteorder = "1.5"
bitvec = "1"
thiserror = "1"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
capstone = "0.12.0"
keystone-engine = { path = "../keystone-bindings", features = ["use-system-lib"] }
